@@ -10,6 +10,7 @@ http://www.redmine.org/
 * Fixed: pre tags containing "<pre*"
 * Fixed: First date of the date range not included in the time report with SQLite
 * Fixed: Password field not styled correctly on alternative stylesheet
+* Fixed: Error when sumbitting a POST request that requires a login
 
 == 2009-11-04 v0.8.6
 
